[package]
name = "phabricator-oauth"
version = "0.1.7"
authors = ["Ilya Volchenkov <lzhepelmen@gmail.com>"]
edition = "2021"
description = "Library for OAuth2 authentication on Phabricator"
license = "MIT"
keywords = ["oauth", "oauth2", "phabricator", "authentication"]
repository = "https://github.com/zryambus/phabricator-oauth"

[lib]
name = "phabricator_oauth"
path = "src/lib.rs"

[dependencies]
oauth2 = { version = "4" }
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
thiserror = "1"
